--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -2,13 +2,13 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "Your Brand"
+brand: "Fabien Haury"
 
 # text below the brand name
-brand_sub_text: "$site_sample"
+brand_sub_text: "Portfolio"
 
 # used for seo meta post author (if it's not defined in post)
-name: "Your Name"
+name: "Your Name test"
 
 # home page top header texts
 home:
@@ -48,9 +48,9 @@ meta_common_description: "Your meta description."
 # the order of the items will be shown as here.
 # comment to remove any contact item
 contacts:
-  #- github: ""
-  #- email: ""
-  #- linkedin: ""
+  - github: "FabienHaury"
+  - email: "fabienhaury@protonmail.com"
+  - linkedin: "/fabienhaury"
   #- twitter: ""
   #- mastodon: ""
   #- instagram: ""
