--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -5,7 +5,7 @@
 brand: "Fabien Haury"
 
 # text below the brand name
-brand_sub_text: "Portfolio"
+brand_sub_text: "Welcome to my portfolio."
 
 # used for seo meta post author (if it's not defined in post)
 name: "Your Name test"
@@ -13,7 +13,7 @@ name: "Your Name test"
 # home page top header texts
 home:
   # you can also use $site_brand, $site_greetings, $site_welcome in line1 and line2 for replacing texts.
-  top_header_line1: "$site_welcome"
+  top_header_line1: "Portfolio de :"
   # if commented, top header will be a single line
   top_header_line2: "$site_brand"
 
