Update en.yml projects

--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -11,20 +11,20 @@ page_data:
     img: ":home-heading.jpg"
     back_color: "lightblue"
 
-  # category:
-    # - title: "Example"
-      # type: id_example
-      # color: "gray"
-    # - title: "Picture"
-      # type: id_picture
-      # color: "#62b462"
-    # - title: "Quote"
-      # type: id_quote
-      # color: "#2FD0ED"
+   category:
+    - title: "Example"
+      type: id_example
+      color: "gray"
+    - title: "Picture"
+       type: id_picture
+       color: "#62b462"
+    - title: "Quote"
+      type: id_quote
+      color: "#2FD0ED"
 
   list:
     # Projet 1
-    # - type: id_example
+    - type: id_example
       project_name: "Manipulation et prétraitement de données"
       project_excerpt: "La manipulation et le prétraitement de données n’est sans doute pas la partie la plus fascinante de la Data Science, mais il s’agit d’une étape incontournable pour toute analyse de données."
       img: ":project1_thumb.jpg"
