--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -5,10 +5,10 @@
 page_data:
   main:
     header: "Projects"
-    # info: "Your Project page description."
+    info: "My Projects."
     text_color: "white"
     # if you don't want to use background image, comment it. back_color will be activated.
-    img: ":home-heading.jpg"
+    img: ":projects-heading.jpg"
     back_color: "lightblue"
 
    category:
