--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -5,7 +5,7 @@
 page_data:
   main:
     header: "Projects"
-    info: "My Projects."
+    info: "Your Project page description."
     text_color: "white"
     # if you don't want to use background image, comment it. back_color will be activated.
     img: ":projects-heading.jpg"
@@ -16,20 +16,20 @@ page_data:
       type: id_example
       color: "gray"
     - title: "Picture"
-       type: id_picture
-       color: "#62b462"
+      type: id_picture
+      color: "#62b462"
     - title: "Quote"
       type: id_quote
       color: "#2FD0ED"
 
   list:
-    # Projet 1
+    # example
     - type: id_example
-      project_name: "Manipulation et prétraitement de données"
-      project_excerpt: "La manipulation et le prétraitement de données n’est sans doute pas la partie la plus fascinante de la Data Science, mais il s’agit d’une étape incontournable pour toute analyse de données."
+      project_name: "Example Project"
+      project_excerpt: "Examples"
       img: ":project1_thumb.jpg"
-      img_title: "data_wrangling.png"
-      date: "2022-05-01"
+      img_title: "img title1"
+      date: "2021-03-13"
       post: |
         # Examples
 
