--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -5,7 +5,7 @@
 page_data:
   main:
     header: "Projects"
-    # info: "Test"
+    info: ""
     text_color: "white"
     # if you don't want to use background image, comment it. back_color will be activated.
     img: ":home-heading.jpg"
@@ -100,7 +100,7 @@ page_data:
 
         ### Link
 
-        This is [Mr. Green Jekyll Theme](https://github.com/MrGreensWorkshop/MrGreen-JekyllTheme), a simple theme built for [Jekyll](https://jekyllrb.com/).
+        This is the for this project [notebook](FabienHaury.github.io/assets/notebook_haury_fabien.pdf), a the report [Jekyll](FabienHaury.github.io/assets/rapport_haury_fabien.pdf).
 
         ### Picture
 
