--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -100,7 +100,7 @@ page_data:
 
         ### Link
 
-        This is the [notebook]({{ FabienHaury.github.io }}/assets/notebook_haury_fabien.pdf), and the [report]({{ FabienHaury.github.io }}/assets/rapport_haury_fabien.pdf).
+        This is the [notebook]({{ https://fabienhaury.github.io }}/assets/notebook_haury_fabien.pdf), and the [report](https://fabienhaury.github.io/assets/rapport_haury_fabien.pdf).
 
         ### Picture
 
