--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -101,7 +101,8 @@ page_data:
         ### Link
 
         This is the [notebook]({{ https://fabienhaury.github.io }}/assets/notebook_haury_fabien.pdf), and the [report](https://fabienhaury.github.io/assets/rapport_haury_fabien.pdf).
-
+        This is [Mr. Green Jekyll Theme](https://github.com/MrGreensWorkshop/MrGreen-JekyllTheme), a simple theme built for [Jekyll](https://jekyllrb.com/).
+        
         ### Picture
 
         ![such a lovely place](:projects-heading.jpg)
