--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -452,3 +452,427 @@ page_data:
         for i in range(5, 10):
           print(i)
         ```
+
+# Projet 4
+    - type: id_example
+      project_name: "Report writing"
+      project_excerpt: "Analyzing data is nice but being able to write a report to synthesize the results is just as important."
+      img: ":latex_logo.png"
+      img_title: "LaTeX logo"
+      date: "2022-07-06"
+      post: |
+        # Examples
+        
+        This is an example page to display markdown related styles for Mr. Green Jekyll Theme.
+        
+        ### Headings (centered)
+        
+        {:data-align="center"}
+        
+        # Heading 1
+        
+        ## Heading 2
+        
+        ### Heading 3
+        
+        #### Heading 4
+        
+        ##### Heading 5
+        
+        ###### Heading 6
+        
+        ***
+        
+        ### Paragraphs
+        
+        #### Paragraph
+        
+        **William Shakespeare**, Let me not to the marriage of true minds
+        Admit impediments. Love is not love
+        Which alters when it alteration finds,
+        Or bends with the remover to remove.
+        O no, it is an ever-fixed mark
+        That looks on tempests and is never shaken;
+        It is the star to every wand'ring barque,
+        Whose worth's unknown, although his height be taken.
+        Love's not Time's fool, though rosy lips and cheeks
+        Within his bending sickle's compass come;
+        Love alters not with his brief hours and weeks,
+        But bears it out even to the edge of doom.
+        If this be error and upon me proved,
+        I never writ, nor no man ever loved.
+        
+        #### Texts
+        
+        Quoted text `Hello world`
+        Bold text **Hello world**
+        Italic text _Hello world_
+        kbd text <kbd>Hello world</kbd>
+        
+        #### Blockquote
+        
+        > **William Shakespeare**, Let me not to the marriage of true minds
+        Admit impediments. Love is not love
+        Which alters when it alteration finds,
+        Or bends with the remover to remove.
+        O no, it is an ever-fixed mark
+        That looks on tempests and is never shaken;
+        It is the star to every wand'ring barque,
+        Whose worth's unknown, although his height be taken.
+        Love's not Time's fool, though rosy lips and cheeks
+        Within his bending sickle's compass come;
+        Love alters not with his brief hours and weeks,
+        But bears it out even to the edge of doom.
+        If this be error and upon me proved,
+        I never writ, nor no man ever loved.
+        
+        ### Link
+        
+        This is the [notebook](https://fabienhaury.github.io/assets/notebook_ue4_haury_fabien.pdf), and the [report](https://fabienhaury.github.io/assets/rapport_ue4_haury_fabien.pdf) for this project.
+        
+        ### Picture
+        
+        ![such a lovely place](:projects-heading.jpg)
+        
+        ### Picture (centered)
+        
+        ![such a lovely place](:project1_thumb.jpg){:data-align="center"}
+        
+        ### Lists
+        
+        - Apple
+        - Banana
+        - Orange
+        1. Fruits
+            1. Apples
+                - Granny Smith
+                - Mutsu
+            1. Bananas
+                - Cavendish
+                - Red
+        1. Vegetables
+        
+        ***
+        
+        ### Tables
+        
+        #### Small Table (centered)
+        
+        | Fruits(not aligned) | Alignment (centered) | num (right align) |
+        | ------------------- | :------------------: | ----------------: |
+        | Apple               |       centered       |              9999 |
+        | Banana              |  centered long text  |               999 |
+        | Orange              |       centered       |                99 |
+        | Lemon               |       centered       |                 9 |
+        {:data-align="center"}
+        
+        #### Wide Table (centered)
+        
+        scroll enabled when page is narrow
+        | Fruits | num (left align) | num (right align) | num  | num  | num  |
+        | ------ | :--------------- | ----------------: | ---- | ---- | ---- |
+        | Apple  | 1111             |              1111 | 2222 | 3333 | 4444 |
+        | Banana | 111              |               111 | 222  | 333  | 444  |
+        | Orange | 11               |                11 | 22   | 33   | 44   |
+        | Lemon  | 1                |                 1 | 2    | 3    | 4    |
+        {:data-align="center"}
+        #### Wider Table
+        
+        scroll enabled when page is narrow
+        | Fruits | num (left align) | num (right align) | num  | num  | num  | num  | num  | num  |
+        | ------ | :--------------- | ----------------: | ---- | ---- | ---- | ---- | ---- | ---- |
+        | Apple  | 1111             |              1111 | 2222 | 3333 | 4444 | 5555 | 6666 | 7777 |
+        | Banana | 111              |               111 | 222  | 333  | 444  | 555  | 666  | 777  |
+        | Orange | 11               |                11 | 22   | 33   | 44   | 55   | 66   | 77   |
+        | Lemon  | 1                |                 1 | 2    | 3    | 4    | 5    | 6    | 7    |
+        ### Code
+        
+        #### Quote
+        
+        ```python
+        for i in range(5, 10):
+          print(i)
+        ```
+
+# Projet 5
+    - type: id_example
+      project_name: "Dimensionality reduction and clustering techniques."
+      project_excerpt: "Analyzing data is nice but being able to write a report to synthesize the results is just as important."
+      img: ":dimension_reduc.png"
+      img_title: "Dimensionnality reduction"
+      date: "2022-07-06"
+      post: |
+        # Examples
+        
+        This is an example page to display markdown related styles for Mr. Green Jekyll Theme.
+        
+        ### Headings (centered)
+        
+        {:data-align="center"}
+        
+        # Heading 1
+        
+        ## Heading 2
+        
+        ### Heading 3
+        
+        #### Heading 4
+        
+        ##### Heading 5
+        
+        ###### Heading 6
+        
+        ***
+        
+        ### Paragraphs
+        
+        #### Paragraph
+        
+        **William Shakespeare**, Let me not to the marriage of true minds
+        Admit impediments. Love is not love
+        Which alters when it alteration finds,
+        Or bends with the remover to remove.
+        O no, it is an ever-fixed mark
+        That looks on tempests and is never shaken;
+        It is the star to every wand'ring barque,
+        Whose worth's unknown, although his height be taken.
+        Love's not Time's fool, though rosy lips and cheeks
+        Within his bending sickle's compass come;
+        Love alters not with his brief hours and weeks,
+        But bears it out even to the edge of doom.
+        If this be error and upon me proved,
+        I never writ, nor no man ever loved.
+        
+        #### Texts
+        
+        Quoted text `Hello world`
+        Bold text **Hello world**
+        Italic text _Hello world_
+        kbd text <kbd>Hello world</kbd>
+        
+        #### Blockquote
+        
+        > **William Shakespeare**, Let me not to the marriage of true minds
+        Admit impediments. Love is not love
+        Which alters when it alteration finds,
+        Or bends with the remover to remove.
+        O no, it is an ever-fixed mark
+        That looks on tempests and is never shaken;
+        It is the star to every wand'ring barque,
+        Whose worth's unknown, although his height be taken.
+        Love's not Time's fool, though rosy lips and cheeks
+        Within his bending sickle's compass come;
+        Love alters not with his brief hours and weeks,
+        But bears it out even to the edge of doom.
+        If this be error and upon me proved,
+        I never writ, nor no man ever loved.
+        
+        ### Link
+        
+        This is the [notebook](https://fabienhaury.github.io/assets/notebook_ue5_haury_fabien.pdf) for this project.
+        
+        ### Picture
+        
+        ![such a lovely place](:projects-heading.jpg)
+        
+        ### Picture (centered)
+        
+        ![such a lovely place](:project1_thumb.jpg){:data-align="center"}
+        
+        ### Lists
+        
+        - Apple
+        - Banana
+        - Orange
+        1. Fruits
+            1. Apples
+                - Granny Smith
+                - Mutsu
+            1. Bananas
+                - Cavendish
+                - Red
+        1. Vegetables
+        
+        ***
+        
+        ### Tables
+        
+        #### Small Table (centered)
+        
+        | Fruits(not aligned) | Alignment (centered) | num (right align) |
+        | ------------------- | :------------------: | ----------------: |
+        | Apple               |       centered       |              9999 |
+        | Banana              |  centered long text  |               999 |
+        | Orange              |       centered       |                99 |
+        | Lemon               |       centered       |                 9 |
+        {:data-align="center"}
+        
+        #### Wide Table (centered)
+        
+        scroll enabled when page is narrow
+        | Fruits | num (left align) | num (right align) | num  | num  | num  |
+        | ------ | :--------------- | ----------------: | ---- | ---- | ---- |
+        | Apple  | 1111             |              1111 | 2222 | 3333 | 4444 |
+        | Banana | 111              |               111 | 222  | 333  | 444  |
+        | Orange | 11               |                11 | 22   | 33   | 44   |
+        | Lemon  | 1                |                 1 | 2    | 3    | 4    |
+        {:data-align="center"}
+        #### Wider Table
+        
+        scroll enabled when page is narrow
+        | Fruits | num (left align) | num (right align) | num  | num  | num  | num  | num  | num  |
+        | ------ | :--------------- | ----------------: | ---- | ---- | ---- | ---- | ---- | ---- |
+        | Apple  | 1111             |              1111 | 2222 | 3333 | 4444 | 5555 | 6666 | 7777 |
+        | Banana | 111              |               111 | 222  | 333  | 444  | 555  | 666  | 777  |
+        | Orange | 11               |                11 | 22   | 33   | 44   | 55   | 66   | 77   |
+        | Lemon  | 1                |                 1 | 2    | 3    | 4    | 5    | 6    | 7    |
+        ### Code
+        
+        #### Quote
+        
+        ```python
+        for i in range(5, 10):
+          print(i)
+        ```
+
+# Projet 6
+    - type: id_example
+      project_name: "Introduction to machine learning."
+      project_excerpt: "Analyzing data is nice but being able to write a report to synthesize the results is just as important."
+      img: ":machine_learning.jpg"
+      img_title: "ML logo"
+      date: "2022-07-06"
+      post: |
+        # Examples
+        
+        This is an example page to display markdown related styles for Mr. Green Jekyll Theme.
+        
+        ### Headings (centered)
+        
+        {:data-align="center"}
+        
+        # Heading 1
+        
+        ## Heading 2
+        
+        ### Heading 3
+        
+        #### Heading 4
+        
+        ##### Heading 5
+        
+        ###### Heading 6
+        
+        ***
+        
+        ### Paragraphs
+        
+        #### Paragraph
+        
+        **William Shakespeare**, Let me not to the marriage of true minds
+        Admit impediments. Love is not love
+        Which alters when it alteration finds,
+        Or bends with the remover to remove.
+        O no, it is an ever-fixed mark
+        That looks on tempests and is never shaken;
+        It is the star to every wand'ring barque,
+        Whose worth's unknown, although his height be taken.
+        Love's not Time's fool, though rosy lips and cheeks
+        Within his bending sickle's compass come;
+        Love alters not with his brief hours and weeks,
+        But bears it out even to the edge of doom.
+        If this be error and upon me proved,
+        I never writ, nor no man ever loved.
+        
+        #### Texts
+        
+        Quoted text `Hello world`
+        Bold text **Hello world**
+        Italic text _Hello world_
+        kbd text <kbd>Hello world</kbd>
+        
+        #### Blockquote
+        
+        > **William Shakespeare**, Let me not to the marriage of true minds
+        Admit impediments. Love is not love
+        Which alters when it alteration finds,
+        Or bends with the remover to remove.
+        O no, it is an ever-fixed mark
+        That looks on tempests and is never shaken;
+        It is the star to every wand'ring barque,
+        Whose worth's unknown, although his height be taken.
+        Love's not Time's fool, though rosy lips and cheeks
+        Within his bending sickle's compass come;
+        Love alters not with his brief hours and weeks,
+        But bears it out even to the edge of doom.
+        If this be error and upon me proved,
+        I never writ, nor no man ever loved.
+        
+        ### Link
+        
+        This is the [notebook](https://fabienhaury.github.io/assets/notebook_ue6_haury_fabien.pdf) for this project.
+        
+        ### Picture
+        
+        ![such a lovely place](:projects-heading.jpg)
+        
+        ### Picture (centered)
+        
+        ![such a lovely place](:project1_thumb.jpg){:data-align="center"}
+        
+        ### Lists
+        
+        - Apple
+        - Banana
+        - Orange
+        1. Fruits
+            1. Apples
+                - Granny Smith
+                - Mutsu
+            1. Bananas
+                - Cavendish
+                - Red
+        1. Vegetables
+        
+        ***
+        
+        ### Tables
+        
+        #### Small Table (centered)
+        
+        | Fruits(not aligned) | Alignment (centered) | num (right align) |
+        | ------------------- | :------------------: | ----------------: |
+        | Apple               |       centered       |              9999 |
+        | Banana              |  centered long text  |               999 |
+        | Orange              |       centered       |                99 |
+        | Lemon               |       centered       |                 9 |
+        {:data-align="center"}
+        
+        #### Wide Table (centered)
+        
+        scroll enabled when page is narrow
+        | Fruits | num (left align) | num (right align) | num  | num  | num  |
+        | ------ | :--------------- | ----------------: | ---- | ---- | ---- |
+        | Apple  | 1111             |              1111 | 2222 | 3333 | 4444 |
+        | Banana | 111              |               111 | 222  | 333  | 444  |
+        | Orange | 11               |                11 | 22   | 33   | 44   |
+        | Lemon  | 1                |                 1 | 2    | 3    | 4    |
+        {:data-align="center"}
+        #### Wider Table
+        
+        scroll enabled when page is narrow
+        | Fruits | num (left align) | num (right align) | num  | num  | num  | num  | num  | num  |
+        | ------ | :--------------- | ----------------: | ---- | ---- | ---- | ---- | ---- | ---- |
+        | Apple  | 1111             |              1111 | 2222 | 3333 | 4444 | 5555 | 6666 | 7777 |
+        | Banana | 111              |               111 | 222  | 333  | 444  | 555  | 666  | 777  |
+        | Orange | 11               |                11 | 22   | 33   | 44   | 55   | 66   | 77   |
+        | Lemon  | 1                |                 1 | 2    | 3    | 4    | 5    | 6    | 7    |
+        ### Code
+        
+        #### Quote
+        
+        ```python
+        for i in range(5, 10):
+          print(i)
+        ```
+
