--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -19,7 +19,7 @@ home:
 
 # about page sub title
 about:
-  sub_title: "change test"
+  sub_title: "Data analyst"
 
 # if you don't want to add copyright year, comment or leave it blank.
 # the year during which the claimed copyright for the work was first asserted.
