--- a/_data/owner/ja.yml
+++ b/_data/owner/ja.yml
@@ -2,24 +2,24 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "サイト名"
+brand: "Fabien Haury"
 
 # text below the brand name
-brand_sub_text: "$site_sample"
+brand_sub_text: "Bienvenue sur mon portfolio"
 
 # used for seo meta post author (if it's not defined in post)
-name: "作者名"
+name: "Your Name"
 
 # home page top header texts
 home:
   # you can also use $site_brand, $site_greetings, $site_welcome in line1 and line2 for replacing texts.
-  top_header_line1: "$site_welcome"
+  top_header_line1: "$site_brand"
   # if commented, top header will be a single line
-  top_header_line2: "$site_brand"
+  #top_header_line2: "$site_brand"
 
 # about page sub title
 about:
-  sub_title: "$site_sample"
+  sub_title: "Data analyst"
 
 # if you don't want to add copyright year, comment or leave it blank.
 # the year during which the claimed copyright for the work was first asserted.
@@ -42,15 +42,15 @@ creative_commons:
 # seo meta this is needed for each language
 # If meta_description is not defined in front matter, it's created from (post / page) content,
 # if it has no content, this will be used for page description. It is also used in manifest.json
-meta_common_description: "メタディスクリプション"
+meta_common_description: "Your meta description."
 
 # contact options (side nav bottom and about page)
 # the order of the items will be shown as here.
 # comment to remove any contact item
 contacts:
-  #- github: ""
-  #- email: ""
-  #- linkedin: ""
+  - github: "FabienHaury"
+  - email: "fabienhaury@protonmail.com"
+  - linkedin: "/fabienhaury"
   #- twitter: ""
   #- mastodon: ""
   #- instagram: ""
