--- a/_data/conf/main.yml
+++ b/_data/conf/main.yml
@@ -55,7 +55,7 @@ greetings_replace: "$site_greetings"
 welcome_replace: "$site_welcome"
 
 # replace text with data.lang[language].constants.sample
-sample_replace: "test test"
+sample_replace: "$site_sample"
 
 ###########################################################
 #                Search
